--- a/configs/termite/config
+++ b/configs/termite/config
@@ -8,7 +8,7 @@ dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
 
-font = xos4 Terminus 8
+font = xos4 Terminus 10
 scrollback_lines = 10000
 search_wrap = true
 
@@ -19,7 +19,7 @@ cursor_blink = system
 cursor_shape = block
 
 # $BROWSER is used by default if set, with xdg-open as a fallback
-browser = firefox
+browser = chromium
 
 # set size hints for the window
 #size_hints = false
