--- a/xorg.conf.d/10-monitor.conf
+++ b/xorg.conf.d/10-monitor.conf
@@ -1,13 +1,29 @@
 Section "Monitor"
-	Identifier  "eDP1"
-	Option      "Primary"       "true"
-	Option      "DPMS"          "true"
-	Option      "PreferredMode" "1366x768"
+        Identifier  "eDP1"
+        Option      "Primary"       "true"
+        Option      "DPMS"          "true"
+        Option      "PreferredMode" "1920x1080"
 EndSection
 
+# Home screen
 Section "Monitor"
-	Identifier  "HDMI2"
-	Option      "Above"       "eDP1"
-	Option      "DPMS"          "true"
-	Option      "PreferredMode" "1920x1080"
+        Identifier  "HDMI2"
+        Option      "RightOf"       "eDP1"
+        Option      "DPMS"          "true"
+        Option      "PreferredMode" "1920x1080"
 EndSection
+
+# Workstation!
+# Section "Monitor"
+#         Identifier  "HDMI2"
+#         Option      "Above"         "eDP1"
+#         Option      "DPMS"          "true"
+#         Option      "PreferredMode" "3840x2160"
+# EndSection
+
+# Section "Monitor"
+#         Identifier  "DP1"
+#         Option      "RightOf"       "HDMI2"
+#         Option      "DPMS"          "true"
+#         Option      "PreferredMode" "1280x1024"
+# EndSection
