--- a/configs/vscode-user-config/settings.json
+++ b/configs/vscode-user-config/settings.json
@@ -1,9 +1,17 @@
 {
     "editor.fontFamily": "'Terminus (TTF)'",
     "editor.fontSize": 14,
+    "editor.detectIndentation": true,
     "editor.rulers": [
         80,
         120
     ],
-    "explorer.confirmDelete": false
+    "explorer.confirmDelete": false,
+    "window.zoomLevel": 0,
+    "ruby.format": "rubocop",
+    "ruby.intellisense": false,
+    "java.home": "/usr/lib/jvm/default-runtime",
+    "java.errors.incompleteClasspath.severity": "ignore",
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true
 }
